# threadbare-unravel

./: .cursorrules  .gitignore  CMakeLists.txt  ORB_FLICKER_DEEP_DIAGNOSIS.md  README.md  REFACTORING_REPORT.md
.github/workflows/: installer-build.yml
Source/: UnravelTuning.h
Source/DSP/: UnravelReverb.cpp  UnravelReverb.h
Source/Processors/: UnravelProcessor.cpp  UnravelProcessor.h
Source/UI/: UnravelEditor.cpp  UnravelEditor.h
Source/UI/frontend/: index.html  package-lock.json  package.json  vite.config.js
Source/UI/frontend/src/: controls.js  main.js  orb.js  presets.js  style.css
build-release/: Makefile
build-release/plugins/unravel/: Makefile 2  ThreadbareUnravel_vst3_helper
build-release/plugins/unravel/ThreadbareUnravel_artefacts/JuceLibraryCode/: Icon.icns  Info.txt  JuceHeader.h
build-release/plugins/unravel/ThreadbareUnravel_artefacts/JuceLibraryCode/Release/: Defs.txt
build-release/plugins/unravel/ThreadbareUnravel_artefacts/JuceLibraryCode/ThreadbareUnravel_AU/: Info.plist
build-release/plugins/unravel/ThreadbareUnravel_artefacts/JuceLibraryCode/ThreadbareUnravel_Standalone/: Info.plist
build-release/plugins/unravel/ThreadbareUnravel_artefacts/JuceLibraryCode/ThreadbareUnravel_VST3/: Info.plist
build-release/plugins/unravel/juce_binarydata_UnravelResources/JuceLibraryCode/: BinaryData.h  BinaryData1.cpp  BinaryData2.cpp  input_file_list
build-release/shared/core/: Makefile
docs/: Plugin Installer UX Research.md  brand_strategy.md  build_guide.md  cursor_prompt_templates.md  cursor_rules.md  frontend_settings_drawer_plan.md  ghost_engine_complete_summary.md  ghost_engine_enhancements_summary.md  ghost_engine_feature_map.md  ghost_engine_memory_metaphor.md  glitch_sparkle_plan.md  installer_ux_completion_map.md  micro_interactions_implementation_plan.md  threadbare-brand-guide.md  threadbare-prd.md  unravel_landing_page_copy.md  unravel_spec.md  unravel_tuning_cheatsheet.md  waver_landing_page_copy.md  waver_spec.md  webview_integration_guide.md
docs/archive/: CODE_QUALITY_CHECK.md  ORB_POSITIONING_DIAGNOSIS.md  REFACTORING_REPORT.md  ghost_engine_enhancement_implementation_guide.md  phase1_reverse_playback_implementation.md  phase2_stereo_positioning_implementation.md  phase3_memory_proximity_implementation.md  phase4_spectral_freeze_implementation.md
installer/: product.json
installer/macos/: Distribution.xml  Entitlements.plist
installer/macos/resources/: README.md  conclusion.html  license.html  welcome.html
installer/macos/scripts/: postinstall  preinstall
installer/windows/: Installer.iss  azure-metadata.json  sign.bat
installer/windows/assets/: README.md
plugins/unravel/: CMakeLists.txt
plugins/unravel/Source/: UnravelGeneratedParams.h  UnravelTuning.h
plugins/unravel/Source/DSP/: UnravelReverb.cpp  UnravelReverb.h
plugins/unravel/Source/Processors/: UnravelProcessor.cpp  UnravelProcessor.h
plugins/unravel/Source/UI/: UnravelEditor.cpp  UnravelEditor.h
plugins/unravel/Source/UI/frontend/: ICONS_GUIDE.md  index.html  package-lock.json  package.json  vite.config.js
plugins/unravel/Source/UI/frontend/src/: controls.js  icons.js  main.js  orb.js  presets.js  style.css
plugins/unravel/config/: params.json
plugins/waver/: CMakeLists.txt
plugins/waver/Source/: WaverGeneratedParams.h  WaverTuning.h
plugins/waver/Source/DSP/: ArpEngine.cpp  ArpEngine.h  BbdChorus.cpp  BbdChorus.h  MoogLadder.cpp  MoogLadder.h  NoiseFloor.cpp  NoiseFloor.h  OrganEngine.cpp  OrganEngine.h  OtaFilter.cpp  OtaFilter.h  OuDrift.cpp  OuDrift.h  Overdrive.cpp  Overdrive.h  PrintChain.cpp  PrintChain.h  TapeSaturation.cpp  TapeSaturation.h  ToyEngine.cpp  ToyEngine.h  WaverEngine.cpp  WaverEngine.h  WaverLFO.cpp  WaverLFO.h  WaverVoice.cpp  WaverVoice.h  WaverVoiceAllocator.cpp  WaverVoiceAllocator.h  WowFlutter.cpp  WowFlutter.h
plugins/waver/Source/Processors/: WaverProcessor.cpp  WaverProcessor.h
plugins/waver/Source/UI/: WaverEditor.cpp  WaverEditor.h
plugins/waver/Source/UI/frontend/: index.html  package-lock.json  package.json  vite.config.js
plugins/waver/Source/UI/frontend/src/: drawer.js  main.js  palette.js  preset-surfaces.js  rbf.js  viz.js  waver.css
plugins/waver/config/: params.json
scripts/: build-installer.ps1  build-installer.sh  copy-artefacts.py  resolve-artefacts.cmake
shared/core/: CMakeLists.txt  ProcessorBase.h  WebViewBridge.cpp  WebViewBridge.h
shared/scripts/: generate_params.js  scaffold-plugin.js
shared/ui/bridge/: juce-bridge.js
shared/ui/shell/src/: controls.js  elastic-slider.js  index.js  presets.js  shell.css
